fix: do not cut off bottom portion of text

--- a/src/themes/shared/_vars.css
+++ b/src/themes/shared/_vars.css
@@ -115,7 +115,7 @@
   --form-element-color            : ;
   --heading-color                 : var(--strong-color);
   --heading-font-weight           : 600;
-  --heading-line-height           : calc(2ex + 5px); /* Unit required */
+  --heading-line-height           : normal; /* Unit required */
   --kbd-bg                        : var(--color-mono-1);
   --kbd-border                    : 1px solid var(--color-mono-3);
   --kbd-border-radius             : 4px;
